// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBreadcrumbsMarkup should generate breadcrumbs HTML for a valid path list in English 1`] = `
"
  <nav id="breadcrumbs" aria-label="Breadcrumbs" class="col-12 col-md-9">
    <ol class="breadcrumb">
      <li class="breadcrumb-item"><a href="/">Kth</a></li><li class="breadcrumb-item"><a href="/test1">Test 1</a></li><li class="breadcrumb-item"><a href="/test2">Test 2</a></li>
    </ol>
  </nav>
"
`;

exports[`getBreadcrumbsMarkup should generate breadcrumbs HTML for a valid path list in Swedish 1`] = `
"
  <nav id="breadcrumbs" aria-label="Brödsmulor" class="col-12 col-md-9">
    <ol class="breadcrumb">
      <li class="breadcrumb-item"><a href="/">Kth</a></li><li class="breadcrumb-item"><a href="/test1">Test 1</a></li><li class="breadcrumb-item"><a href="/test2">Test 2</a></li>
    </ol>
  </nav>
"
`;
